testing, more migration to github

--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,6 @@
 envlist = py26,py27,py31,py32,pypy
 
 [testenv]
-deps=nose
-commands=nosetests
+;deps=nose
+;commands=nosetests
+commands=python setup.py test
